# docs/swagger.json
@@ -443,7 +443,8 @@
                 },
                 "tanggal_pemesanan": {
                     "type": "string",
-                    "example": "2024-12-03"
+                    "format": "date-time",
+                    "example": "2024-09-01T00:00:00Z"
                 }
             }
         },
@@ -492,7 +493,8 @@
                 },
                 "tanggal_pemesanan": {
                     "type": "string",
-                    "example": "2024-12-03"
+                    "format": "date-time",
+                    "example": "2024-09-01T00:00:00Z"
                 }
             }
         }
